# crud_rust

./: .env  Cargo.toml
src/: main.rs
src/databases/postgres_connection/: mod.rs
src/services/users/: models.rs  services.rs
